# fillform

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/routes/: extraction.py
app/api/schemas/: requests.py  responses.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/domain/: models.py  statuses.py  validation.py
app/llm/: anthropic.py  base.py  factory.py  json_parsing.py  ollama.py  openai_compatible.py
app/llm/prompts/: double_check.en.md  double_check.it.md  extraction.en.md  extraction.it.md
app/pipeline/: __init__.py  chunking.py  document_conversion.py  double_check.py  extraction.py  prompts.py  service.py
app/storage/: job_store.py
scripts/: harden-ollama.sh
tests/: test_chunking.py  test_job_store.py  test_ollama_json_parsing.py  test_prompts.py  test_requests.py  test_service.py  test_validation.py
tests/fixtures/: aggiorna-profilo-aziendale-payload.md
